--- a/build
+++ b/build
@@ -5,7 +5,7 @@ cd kernel && DESTDIR="../sysroot" make install && cd ..
 mkdir -p iso/boot/grub
 cp sysroot/boot/eos.kernel iso/boot/eos.kernel
 cat > iso/boot/grub/grub.cfg << EOF
-menuentry "myos" {
+menuentry "eos" {
 	multiboot /boot/eos.kernel
 }
 EOF
